@@ -10,6 +10,7 @@
 #include <security/_pam_aconf.h>
 
 #include <stdio.h>
+#include <stdlib.h>
 #include <syslog.h>
 #include <sys/time.h>
 #include <sys/types.h>
